gccida/c2/gen_array_type_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10238:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r8 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10239:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10243:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10298:4: error: incomplete definition of type 'struct hash_table'
v11->alloc_node = indirect_string_alloc; 
~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10356:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10358:20: error: expected expression
v22 = ( tree_node *)rtl[7]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10358:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)rtl[7]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/dwarf2out.c:10360:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
&& ( rtl[1] != 6 || *( _QWORD *)&rtl[6] || *( _BYTE *)( v20.rtwint + 16) != 6 || *( _QWORD *)( v20.rtwint + 96)) ) 
     ~~~~~~ ^  ~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_array_type_die/src/obj/dwarf2out.o] Error 1
